--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/jarqvi/simple-web-scrap#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "mongoose": "^6.5.2",
+    "node-schedule": "^2.1.1",
+    "objects-to-csv": "^1.3.6",
     "puppeteer": "^20.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
